# vgm_scraper

./: .gitignore  AGENTS.MD  REPORT.md  __init__.py  __main__.py  app_logging.py  config.py  core.py  gui.py  launch.py  launch_gui.py  run.bat  run_gui.bat  start_player_ui.bat
PLAYER/: .gitignore  AGENTS.MD  README.md  pyproject.toml  run_simpleplayer.bat  run_simpleplayer.pyw  test_all_engines.py  test_all_gbs.py  test_gbs.py  test_gbs_accuracy.py  test_gbs_engine.py  test_psf_abs.py
PLAYER/chiptunes/: MANIFEST.json  README.md
PLAYER/chiptunes/Capcom CPS Arcade/: 01_cd00.miniqsf  02_cd01.miniqsf  03_cd02.miniqsf  04_cd03.miniqsf  05_cd04.miniqsf  06_cd05.miniqsf  07_cd06.miniqsf  08_cd07.miniqsf  09_cd08.miniqsf  10_cd09.miniqsf  Cadillacs & Dinosaurs.qsflib
PLAYER/chiptunes/MSX/: 06_alex kidd in shinobi world.kss  07_algo wars.kss  08_aliens 2.kss  09_amidar (arcade).kss  10_animal land murder case.kss
PLAYER/chiptunes/Multi-system VGM/: 01_ecco 2 - the tides of time (gg) - atlantis.vgm  02_ecco 2 - the tides of time (gg) - main theme.vgm  02_ecco 2 - the tides of time (gg) - main theme.vgz  03_ecco 2 - the tides of time (gg) - maze of stone.vgm  04_ecco 2 - the tides of time (gg) - sea of darkness.vgm  05_ecco 2 - the tides of time (gg) - vents of medusa.vgm  06_ecco 2 - the tides of time (gg) - vortex future.vgm  07_labyrinth of no end (remake).vgm  08_a 8 bit song.vgm  08_a 8 bit song.vgz  09_spanish dream - remake 8 bit version.vgm  09_spanish dream - remake 8 bit version.vgz  10_labyrinth vs dungeon.vgm  10_labyrinth vs dungeon.vgz
PLAYER/chiptunes/NEC PC Engine/: 02_3x3 eyes - sanjiyan henjou.hes  08_artist tool.hes  09_atlas - renaissance voyager.hes  10_atomic robokid special.hes
PLAYER/chiptunes/Nintendo 64/: 01_dnx congrats split.usf  01_sparse01.miniusf  02_sparse03.miniusf  03_sparse04.miniusf  04_sparse06.miniusf  05_sparse08.miniusf  06_sparse09.miniusf  07_sparse0a.miniusf  08_sparse0b.miniusf  09_sparse0c.miniusf  10_sparse0d.miniusf  tama64.usflib
PLAYER/chiptunes/Nintendo DS/: 01_ntr-a8aj-jpn-01h2-majang-qz-0000.mini2sf  01_ntr-a8yj-jpn.2sf  02_ntr-a8aj-jpn-01h2-majang-qz-0001.mini2sf  02_ntr-ablj-jpn.2sf  03_ntr-a8aj-jpn-02-chara-select.mini2sf  03_ntr-yc3k-kor.2sf  04_ntr-a8aj-jpn-02-game-select.mini2sf  04_ntr-adlj-jpn.2sf  05_ntr-a8aj-jpn-02-play-select.mini2sf  05_ntr-cgwj-jpn.2sf  06_ntr-a8aj-jpn-majang-0000.mini2sf  06_ntr-awtj-jpn.2sf  07_ntr-a8aj-jpn-majang-0001.mini2sf  07_ntr-chxp-eur.2sf  08_ntr-a8aj-jpn-majang-0002.mini2sf  08_ntr-yjqe-usa.2sf  09_ntr-a8aj-jpn-majang-0003.mini2sf  10_ntr-a8aj-jpn-majang-0004.mini2sf  NTR-A8AJ-JPN_01H2_MAJANG_QZ.2sflib  NTR-A8AJ-JPN_MAJANG.2sflib
PLAYER/chiptunes/Nintendo Game Boy/: 04_adventure island.gbs  05_aero star.gbs  06_after burst.gbs  07_aladdin.gbs  08_alice in wonderland.gbs  09_alien 3.gbs  10_alleyway.gbs
PLAYER/chiptunes/Nintendo Game Boy Advance/: 01_ereader-000c.gsf  01_payback-0002.minigsf  02_aas-demo-0003.minigsf  02_ereader-000d.gsf  03_aas-demo-0002.minigsf  03_ereader-0016.gsf  04_aas-demo-0001.minigsf  04_ereader-0022.gsf  05_ereader-003a.gsf  05_payback-0003.minigsf  06_ereader-003b.gsf  06_payback-0001.minigsf  07_aas-demo-0004.minigsf  07_ereader-004c.gsf  08_ereader-0051.gsf  08_payback-0000.minigsf  09_ereader-0052.gsf  09_payback-0004.minigsf  10_aas-demo-0000.minigsf  10_ereader-0053.gsf  aas_demo.gsflib  ereader.gsflib  payback.gsflib
PLAYER/chiptunes/Nintendo NES/: 02_100 man $ kid - maboroshi no teiou hen.nsf  03_100-in-1-contra function 16.nsf  04_10000000-in-1 (menu).nsf  05_1942.nsf  05_T_AiSenshiNicole_BGM1.nsfe  06_1943 - the battle of midway.nsf  06_Akumajou Densetsu.nsfe  07_1943 attack enemy ship 1.nsf  07_T_AkumajouDracula_CrossYourHeart_VRC7Ver.nsfe  08_1991 du ma racing.nsf  09_1999.nsf  10_T_GetTheWorld!_NesVersion.nsfe
PLAYER/chiptunes/Nintendo SNES/: 01_smash it.spc  02_lrt-01.spc  03_lrt-02.spc  04_lrt-03.spc  05_lrt-04.spc  06_lrt-05.spc  07_lrt-06.spc  08_lrt-07.spc  09_lrt-08.spc  10_lrt-09.spc
PLAYER/chiptunes/Sega Dreamcast/: 01_18wheelr-001-08.dsf  01_alpiltdx-001-02-00-00.minidsf  02_18wheelr-003-05.dsf  02_alpiltdx-001-02-00-01.minidsf  03_18wheelr-004-01.dsf  03_alpiltdx-001-02-00-02.minidsf  04_18wheelr-005-07.dsf  04_alpiltdx-001-02-00-03.minidsf  05_18wheelr-006-27.dsf  05_alpiltdx-001-02-00-04.minidsf  06_18wheelr-007-26.dsf  06_alpiltdx-001-02-00-05.minidsf  07_18wheelr-008-24.dsf  07_alpiltdx-001-02-00-06.minidsf  08_18wheelr-009-23.dsf  08_alpiltdx-001-02-00-07.minidsf  09_18wheelr-010-0A.dsf  09_alpiltdx-001-02-00-08.minidsf  10_18wheelr-013-0B.dsf  10_alpiltdx-001-02-00-09.minidsf  alpiltdx_001_02.dsflib
PLAYER/chiptunes/Sega Genesis/: 01_sample.gym  02_sega cd hoax bios.gym  03_art alive.gym  04_boss.gym  05_endlevel.gym  06_extra.gym  07_gameover.gym  08_level1.gym  09_level2.gym  10_level3.gym
PLAYER/chiptunes/Sega Saturn/: 01_bgm-000.ssf  01_bgm-069-00-00.minissf  02_bgm-001.ssf  02_bgm-069-00-01.minissf  03_bgm-002.ssf  03_bgm-069-00-02.minissf  04_bgm-003.ssf  04_bgm-069-00-03.minissf  05_bgm-004.ssf  05_bgm-02-00-00.minissf  06_bgm-005.ssf  06_bgm-02-00-01.minissf  07_bgm-006.ssf  07_bgm-02-00-02.minissf  08_bgm-007.ssf  (+7 more)
PLAYER/docs/: ASAP_BACKEND_PLAN.md  BACKEND_ROADMAP.md  ENGINE_RESEARCH.md  KSS_NOTES.md  MILESTONE_2026-05-19.md  PSF_BACKEND_PLAN.md  REMAINING_WORK.md
PLAYER/scripts/: README.md  associate_files.py  register_file_associations.bat  register_future_associations.bat
PLAYER/simpleplayer/: app.py  single_instance.py
PLAYER/tests/: test_audio_device.py  test_chiptune_fixtures.py  test_future_backend_fixtures.py
PLAYER/tools/: download_chiptune_fixtures.py  download_future_fixtures.py
audio_engine/: README.md  pyproject.toml
audio_engine/engines/: README.md
audio_engine/simpleplayer/: audio.py
(+184 files in other folders)
