[project]
name = "vgm-audio-engine"
version = "0.1.0"
description = "Extracted real-time emulated console and arcade music audio engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
